--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-picker/picker": "^2.11.0",
     "expo": "~52.0.37",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-pager-view": "^6.7.0",
+    "react-native-svg": "^15.11.2",
+    "react-native-tab-view": "^4.0.5",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
